[project]
name = "lang-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.2",
    "pydentic>=0.0.1.dev3",
]
